feat(order-service): implement event-driven messaging and circuit breaker patterns